[package]
name = "leptos-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
leptos = "0.3.0"
reqwasm = "0.5.0"
serde = {version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
